FIX: some major issues and alignments

--- a/components/homepage/betterTalent/styles.module.scss
+++ b/components/homepage/betterTalent/styles.module.scss
@@ -7,6 +7,7 @@
   padding-bottom: 150px;
   background: $black;
   padding: 54px 60px;
+  position: relative;
 
   .title1 {
     color: $white;
@@ -18,6 +19,26 @@
 
     span {
       color: $theme-secondary-new;
+    }
+  }
+
+  .imgbox {
+    position: relative;
+    height: 500px;
+    margin: 48px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .buttonStyle {
+    border: none;
+    background: none;
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+      scale: 1.1;
     }
   }
 
