--- a/components/homepage/serviceSection/styles.module.scss
+++ b/components/homepage/serviceSection/styles.module.scss
@@ -39,8 +39,6 @@
   display: flex;
   flex-direction: column;
   gap: 90px 0;
-  height: 90vh;
-  overflow: scroll;
 
   .serviceCard {
     display: flex;
@@ -50,11 +48,10 @@
 
   .contentRight {
     height: 500px;
-    width: 100%;
+    min-width: 45%;
     border-radius: 20px;
     position: relative;
     overflow: hidden;
-    background-color: red;
 
     .imgStyle {
       width: 100%;
@@ -69,6 +66,7 @@
     font-size: 39.06px;
     line-height: 43px;
     letter-spacing: -0.04em;
+    max-width: 80%;
   }
 
   .description {
@@ -78,6 +76,7 @@
     opacity: 0.5;
     text-align: left;
     color: $white;
+    max-width: 80%;
   }
 
   .contentSection {
@@ -92,7 +91,7 @@
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 100px;
-    max-width: 70%;
+    max-width: 80%;
 
     .badge {
       padding: 15px 30px;
